--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SOURCE
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_compile_options(-Wall -Werror -Wpedantic -Wextra -O2)
 add_executable(${PROJECT_NAME} ${SOURCE} src/main.cpp )
 
 include(FetchContent)
