--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(university-db)
 set(SOURCE
     src/database.cpp
     src/student.cpp
-    src/person.cpp)
+    src/person.cpp
+    src/employee.cpp)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
